--- a/site/templates/twig/items/cxm/.new/xref/qnotes/.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/.js.twig
@@ -67,7 +67,7 @@ $(function() {
 							}
 						});
 					} else {
-						// form.submit();
+						form.submit();
 					}
 				} else {
 					var notesform = $(form);
