--- a/site/templates/twig/code-tables/mar/ctm/edit/qnotes/modal.twig
+++ b/site/templates/twig/code-tables/mar/ctm/edit/qnotes/modal.twig
@@ -2,7 +2,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="notes-modal-label">Editing <span class="desc"></span> Notes for {{ code.id }}</h5>
+				<h5 class="modal-title" id="notes-modal-label"><span class="desc"></span> Notes for {{ code.id }}</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
