--- a/site/templates/twig/items/mxrfe/xref/notes/mmsc/js.twig
+++ b/site/templates/twig/items/mxrfe/xref/notes/mmsc/js.twig
@@ -52,7 +52,7 @@ $(function () {
 
 				alarm.unsavedChanges(function(confirmSave) {
 					if (confirmSave) {
-						form.submit();
+						form.find('button[type=submit][value="update-notes"]').click();
 						return true;
 					}
 					modal.attr('tabindex', '-1');
