--- a/site/templates/twig/msa/noce/ajax/form.twig
+++ b/site/templates/twig/msa/noce/ajax/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ input.paginateUrl(1) }}" method="get" class="allow-enterkey-submit" id="predefined-notes-form">
+<form action="{{ input.paginateUrl(1, {'includeQueryString': false}) }}" method="GET" class="allow-enterkey-submit" id="predefined-notes-form">
 	<div class="input-group form-group">
 		<input class="form-control form-group inline" type="text" name="q" value="" placeholder="Search Pre-Defined Note Code, Description">
 		<span class="input-group-btn">
