Calculate listprice from item baseprice if not set

--- a/site/templates/twig/items/vxm/xref/form/js/classes/Calculator.js.twig
+++ b/site/templates/twig/items/vxm/xref/form/js/classes/Calculator.js.twig
@@ -27,6 +27,10 @@ class VxmCalculator {
 		return floatParse(listprice) / floatParse(uomconversion);
 	}
 
+	listprice(eachlistprice, uomconversion) {
+		return floatParse(eachlistprice) * floatParse(uomconversion);
+	}
+
 	priceFromCostMargin(cost, margin) {
 		return cost / (1 - (margin / 100));
 	}
