FIX: update vxm notes

--- a/site/templates/twig/items/vxm/notes/detail/modal.twig
+++ b/site/templates/twig/items/vxm/notes/detail/modal.twig
@@ -10,7 +10,9 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="notes-detail-modal-label"><span class="action-desc">Adding</span> {{ item.itemid }} Vendor {{ item.vendorid }} Detail Notes</h5>
+				<h5 class="modal-title" id="notes-detail-modal-label">
+					{{ item.vendorid }} Detail Notes for {{ item.itemid }} 
+				</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -37,10 +39,11 @@
 						<button type="submit" name="action" value="update-notes" class="btn btn-success">
 							<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 						</button>
-						{# TODO: add confirmation for deletion 'delete_button' #}
-						<button type="submit" name="action" value="delete-notes" class="btn btn-danger">
-							<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-						</button>
+						<div>
+							<button type="submit" name="action" value="delete-notes" class="btn btn-danger collapse">
+								<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
+							</button>
+						</div>
 						<button type="button" class="btn btn-warning pull-right" data-dismiss="modal">
 							<i class="fa fa-times" aria-hidden="true"></i> Close
 						</button>
