--- a/site/templates/twig/items/vxm/notes/internal/modal.twig
+++ b/site/templates/twig/items/vxm/notes/internal/modal.twig
@@ -10,13 +10,15 @@
 	<div class="modal-dialog modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="notes-internal-modal-label"><span class="action-desc">Adding</span> {{ item.itemid }} Vendor {{ item.vendorid }} Internal Notes</h5>
+				<h5 class="modal-title" id="notes-internal-modal-label">
+					{{ item.vendorid }} Internal Notes for {{ item.itemid }}
+				</h5>
 				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
 			</div>
 			<div class="modal-body">
-				<form action="{{ page.fullURL.getURL() }}" method="post" id="intv-form">
+				<form action="{{ page.fullURL.getURL() }}" method="POST" id="intv-form">
 					<input type="hidden" name="itemID" value="{{ item.ouritemid }}">
 					<input type="hidden" name="vendorID" value="{{ item.vendorid }}">
 					<input type="hidden" name="vendoritemID" value="{{ item.vendoritemid }}">
@@ -59,10 +61,11 @@
 						<button type="submit" name="action" value="update-notes" class="btn btn-success">
 							<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 						</button>
-						{# TODO: add confirmation for deletion 'delete_button' #}
-						<button type="submit" name="action" value="delete-notes" class="btn btn-danger">
-							<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
-						</button>
+						<div>
+							<button type="submit" name="action" value="delete-notes" class="btn btn-danger collapse">
+								<i class="fa fa-trash-o" aria-hidden="true"></i> Delete
+							</button>
+						</div>
 						<button type="button" class="btn btn-warning pull-right" data-dismiss="modal">
 							<i class="fa fa-times" aria-hidden="true"></i> Close
 						</button>
