--- a/site/templates/twig/items/cxm/.new/xref/form.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form.twig
@@ -1,5 +1,5 @@
 <form action="{{ input.url() }}" method="POST" id="cxm-item-form">
-	<input type="hidden" name="action" value="update-cxm">
+	<input type="hidden" name="action" value="update">
 	<input type="hidden" name="original_custitemID" value="{{ xref.custitemID }}">
 	<input type="hidden" name="updatepdm" value="false">
 
