--- a/site/templates/twig/items/cxm/.new/xref/form/header.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form/header.twig
@@ -25,7 +25,7 @@
 		{% include 'util/form/input.twig' with {
 				'name': 'revision', 'value': xref.revision,
 				'attributes': {
-					'maxlength': cxm.field_attribute('revision', 'maxlength'),
+					'maxlength': cxm.fieldAttribute('revision', 'maxlength'),
 				}
 			}
 		%}
