FEAT: use new qnotes ICXM

--- a/site/templates/twig/items/cxm/.new/xref/form/header.twig
+++ b/site/templates/twig/items/cxm/.new/xref/form/header.twig
@@ -14,7 +14,7 @@
 		<label>Notes</label>
 	</div>
 	<div class="col-sm-8">
-		{{ qnotes.notes_exist_item(xref.itemid, xref.custid)|yesorno|capitalize }}
+		{{ qnotes.notesExist(xref.itemid, xref.custid)|yesorno|capitalize }}
 	</div>
 </div>
 <div class="row form-group">
