--- a/site/templates/twig/items/cxm/.new/xref/qnotes/js/classes/Form.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/js/classes/Form.js.twig
@@ -9,7 +9,7 @@ class QnotesForm {
 	}
 
 	constructor() {
-		this.id = 'order-notes-form';
+		this.id = 'qnotes-form';
 		this.form = $('#' + this.id);
 		this.inputs = QnotesInputs.getInstance();
 		this.config = QnotesConfig.getInstance();
