--- a/site/templates/twig/items/cxm/.new/xref/qnotes/js/classes/Inputs.js.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/js/classes/Inputs.js.twig
@@ -9,7 +9,7 @@ class QnotesInputs {
 	}
 
 	constructor() {
-		this.id            = 'code-form',
+		this.id            = 'qnotes-form',
 		this.form          = $('#' + this.id),
 		this.note          = this.form.find('input[name=note]');
 		this.qnote   = this.form.find('input[name=quote]');
