--- a/site/templates/twig/items/cxm/.new/xref/qnotes/modal.twig
+++ b/site/templates/twig/items/cxm/.new/xref/qnotes/modal.twig
@@ -16,7 +16,7 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form action="{{ input.url() }}" id="order-notes-form" method="POST">
+				<form action="{{ input.url() }}" id="qnotes-form" method="POST">
 					<input type="hidden" name="custID" value="{{ xref.custid }}">
 					<input type="hidden" name="custitemID" value="{{ xref.custitemid }}">
 					<input type="hidden" name="itemID" value="{{ xref.itemid }}">
@@ -25,11 +25,11 @@
 					<p>Print Notes On:</p>
 					<div class="form-group">
 						<div class="row">
-							{% for form, label in qnotes.get_forms_shortlabels() %}
+							{% for field in constant('FIELDS_FORMS', qnotes) %}
 								<div class="col">
 									<div class="custom-control custom-checkbox">
-										<input type="checkbox" class="custom-control-input order-form" name="{{ form }}" id="order-{{form}}" value="Y">
-										<label class="custom-control-label" for="order-{{form}}">{{ form|capitalize }}</label>
+										<input type="checkbox" class="custom-control-input order-form" name="{{ field }}" id="order-{{field}}" value="Y">
+										<label class="custom-control-label" for="order-{{field}}">{{ qnotes.fieldAttribute(field, 'label')|capitalize }}</label>
 									</div>
 								</div>
 							{% endfor %}
@@ -43,7 +43,7 @@
 					</div>
 					<div class="form-group">
 						<label for="note">Notes</label>
-						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.get_column_count(), 'rows': 15 } %}
+						{% include 'util/qnotes-textarea.twig' with {'cols': qnotes.fieldAttribute('note', 'cols'), 'rows': 15 } %}
 					</div>
 
 					<div class="d-flex justify-content-between align-items-center">
