--- a/site/templates/twig/items/itm/xrefs/xrefs-display.twig
+++ b/site/templates/twig/items/itm/xrefs/xrefs-display.twig
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
 	<div class="card-header">
 		<div class="row">
 			<div class="col-sm-2">
@@ -36,3 +36,7 @@
 		</div>
 	{% endblock %}
 </div>
+
+{% block extras %}
+
+{% endblock %}
