--- a/site/templates/twig/items/cxm/xref/notes/list.twig
+++ b/site/templates/twig/items/cxm/xref/notes/list.twig
@@ -2,7 +2,7 @@
 	var                    Description / Instance of
 	-------------------------------------------------
 	item                ItemXrefCustomer
-	qnotes              module QnotesItemCxm
+	qnotes              Dplus\Qnotes\Icxm
 #}
 <div class="list-group">
 	<div class="list-group-item list-group-item-action bg-dark text-white">
