--- a/site/templates/twig/items/cxm/new-cxm-modal.twig
+++ b/site/templates/twig/items/cxm/new-cxm-modal.twig
@@ -8,7 +8,7 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form action="{{ page.url }}" method="get" id="new-cxm-form">
+				<form action="{{ input.url() }}" method="get" id="new-cxm-form">
 					<div class="form-group">
 						<label for="newcustID">Customer ID</label>
 						{% include 'util/bootstrap/form/input-group.twig' with {
